[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bitsandbytes>=0.49.2",
    "deepeval>=3.8.4",
    "llama-index>=0.14.15",
    "llama-index-embeddings-huggingface>=0.6.1",
    "openai-agents>=0.9.1",
    "optimum>=2.1.0",
    "path>=17.1.1",
    "peft>=0.18.1",
    "python-dotenv>=1.2.1",
]
